--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,5 +13,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    - name: install raylib
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y libraylib-dev
     - name: make
       run: make
