--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,9 +13,17 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: install raylib
+
+    - name: Install dependencies
+      run: sudo apt-get install -y build-essential libglfw3-dev libgl1-mesa-dev libglu1-mesa-dev
+
+    - name: Install Raylib
       run: |
-        sudo apt-get update
-        sudo apt-get install -y libraylib-dev
-    - name: make
+        sudo apt-get install -y cmake
+        git clone https://github.com/raysan5/raylib.git
+        cd raylib/src
+        make PLATFORM=PLATFORM_DESKTOP
+        sudo make install
+
+    - name: Build with Makefile
       run: make
