--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Install dependencies
-      run: sudo apt-get install -y build-essential libglfw3-dev libgl1-mesa-dev libglu1-mesa-dev
+      run: sudo apt-get install -y build-essential libglfw3-dev libgl1-mesa-dev libglu1-mesa-dev libxcursor-dev
 
     - name: Install Raylib
       run: |
