--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,12 +13,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-
-    - name: Install dependencies
-      run: sudo apt-get install -y build-essential libglfw3-dev libgl1-mesa-dev libglu1-mesa-dev libxcursor-dev
-
     - name: Install Raylib
       run: |
+        sudo apt-get install -y build-essential libglfw3-dev libgl1-mesa-dev libglu1-mesa-dev libxcursor-dev
         sudo apt-get install -y cmake
         git clone https://github.com/raysan5/raylib.git
         cd raylib/src
